# MagicalGirlGlowDown

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  launcher.py  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 🐛-bug-报告--bug-report-.md  💡功能祈愿--feature-request-.md
.github/workflows/: autobuild.yml  ci.yml
docs/: FAQ.md  diagnostics.md  gigabyte-validation.md  gigabyte-validation_EN.md  protocol-notes.md  protocol-notes_EN.md
docs/releases/: Releases0.1.0.md
helper/MagicalGirlGlowDown.GigabyteHelper/: FakeGigabyteAdapter.cs  GccAssemblyResolver.cs  GccInstallation.cs  GccLightingAdapter.cs  GccReflectionAdapter.cs  GccReflectionLightingSession.cs  HelperServer.cs  IGigabyteAdapter.cs  MagicalGirlGlowDown.GigabyteHelper.csproj  Messages.cs  Program.cs  VendorMethodPolicy.cs  ZoneClassifier.cs
helper/MagicalGirlGlowDown.GigabyteHelper.Tests/: GccInstallationTests.cs  LightingAdapterTests.cs  MagicalGirlGlowDown.GigabyteHelper.Tests.csproj  ProtocolTests.cs  StagingPathTests.cs  ZoneClassifierTests.cs
helper/NollieRGBIdle.GigabyteHelper/: FakeGigabyteAdapter.cs  GccAssemblyResolver.cs  GccInstallation.cs  GccLightingAdapter.cs  GccReflectionAdapter.cs  GccReflectionLightingSession.cs  HelperServer.cs  IGigabyteAdapter.cs  Messages.cs  Program.cs  VendorMethodPolicy.cs  ZoneClassifier.cs
helper/NollieRGBIdle.GigabyteHelper.Tests/: LightingAdapterTests.cs  NollieRGBIdle.GigabyteHelper.Tests.csproj  ProtocolTests.cs  ZoneClassifierTests.cs
installer/: MagicalGirlGlowDown.iss
scripts/: build-helper.ps1  set-admin-manifest.ps1  verify-wheel-helper.ps1
src/magical_girl_glow_down/: __init__.py  app_guard.py  autostart.py  branding.py  domain.py  gigabyte.py  i18n.py  input_monitor.py  lighting.py  main.py  privilege.py  protocol.py  runtime.py  (+7 more)
tests/: fakes.py  test_admin_manifest.py  test_app_guard.py  test_autostart.py  test_branding.py  test_domain.py  test_gigabyte.py  test_i18n.py  test_input_monitor.py  test_lighting.py  test_main.py  test_privilege.py  test_protocol.py  test_runtime.py  test_security_paths.py  test_service.py  test_simulator.py  test_storage.py  test_tray_worker.py  test_windows_input.py
(+26 files in other folders)
