[project]
name = "nollie-rgb-idle"
version = "0.1.0"
description = "Idle dimming companion for Nollie RGB controllers"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "hidapi>=0.14.0.post4",
  "psutil>=6.1",
  "pyside6>=6.8",
]

[project.scripts]
nollie-rgb-idle = "nollie_rgb_idle.main:main"

[dependency-groups]
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.9",
  "types-psutil>=6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nollie_rgb_idle"]
artifacts = ["src/nollie_rgb_idle/gigabyte_helper/*.exe"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["nollie_rgb_idle"]

[[tool.mypy.overrides]]
module = ["hid"]
ignore_missing_imports = true
