[project]
name = "magical-girl-glow-down"
version = "0.1.0"
description = "Windows idle lighting manager for Nollie and Gigabyte RGB hardware"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12.10,<3.13"
dependencies = [
  "hidapi>=0.14.0.post4",
  "psutil>=6.1",
  "pyside6>=6.8",
]

[project.scripts]
magical-girl-glow-down = "magical_girl_glow_down.main:main"

[dependency-groups]
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.9",
  "types-psutil>=6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magical_girl_glow_down"]
artifacts = ["src/magical_girl_glow_down/gigabyte_helper/*.exe"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["magical_girl_glow_down"]

[[tool.mypy.overrides]]
module = ["hid"]
ignore_missing_imports = true
